--- a/.github/workflows/ChatGpt.yml
+++ b/.github/workflows/ChatGpt.yml
@@ -1,2 +1,20 @@
-- name: ChatGPT CodeReviewer
-  uses: anc95/ChatGPT-CodeReview@v1.0.22
+name: Ask CodeGPT for feedback
+
+on:
+  pull_request:
+    types: [opened]
+  issue_comment:
+    types: [created]
+
+jobs:
+  process-events:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run CodeGPT
+        if: github.event_name == 'pull_request' || (github.event_name == 'issue_comment' && contains(github.event.comment.body, 'CodeGPT') && !contains(github.event.comment.body,'The following is a message from CodeGPT:'))
+        uses: isat/codegpt@v1.0.0
+        with:
+          OPENAI_ASSISTANT_ID: 'YOUR_ASSISTANT_ID_GOES_HERE'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
